--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,33 +1,49 @@
-@tailwind base;
-@tailwind components;
+@tailwind base; 
+@tailwind components; 
 @tailwind utilities;
 
+
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --dark1: #393939;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+
+/* width */
+::-webkit-scrollbar {
+  width: 0.3rem;
+  height: 0px;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+/* Track */
+::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0);
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(156, 163, 175);
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(156, 163, 175, 0.822);
+}
+
+
+.nav-link-container:hover .nav-link{
+    transform: scale(110%);
+}
+
+.btn-audio:hover .tag{
+    display: block;
+    opacity: 100%;
+}
+
+/* .btn-profile-dropdown:focus .profile-dropdown-container{
+    display: block;
+} */
+
+.transition-slide{
+    transition: 0.5s cubic-bezier(0,.97,.62,.99);
 }
